Start changing callbacks to obsereables

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,19 @@
             packages: {
                 'app': {
                     defaultExtension: 'js'
+                },
+                '../node_modules': {
+                    defaultExtension: 'js'
                 }
+            },
+            paths: {
+                'rxjs/add/observable/*': '../node_modules/rxjs/add/observable/*.js',
+                'rxjs/add/operator/*': '../node_modules/rxjs/add/operator/*.js',
+                'rxjs/*': '../node_modules/rxjs/*.js'
             }
         });
         System.import('app/app');
+
     </script>
 
 </body>
