--- a/src/unit-tests.html
+++ b/src/unit-tests.html
@@ -7,6 +7,7 @@
     <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="./unit-tests.js"></script>
 </head>
 
