--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <my-app>Loading...</my-app>
+    <script src="../node_modules/es6-shim/es6-shim.js"></script>
     <script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
     <script src="../node_modules/rxjs/bundles/Rx.js"></script>
