Changed to HashLocationStrategy since live-server does not support HTML 5 push.

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
 
 <head>
     <title>Angular 2 QuickStart</title>
-<!--
-    <base href="http://localhost:9000/src/">
--->
-    <script>document.write('<base href="' + document.location + '" />');</script>
+    <base href="/src/">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./app/styles/main.css">
     <link rel="stylesheet" href="./app/styles/modalDialog.css">
